# docs/openapi_v3.json
@@ -2300,6 +2300,21 @@
               "format": "uuid",
               "example": "31c14825-de80-43b5-88cc-89e21882a79d"
             }
+          },
+          {
+            "name": "include",
+            "in": "query",
+            "description": "Élements à inclure avec la réponse",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string",
+                "enum": [
+                  "groups"
+                ]
+              },
+              "default": []
+            }
           }
         ],
         "responses": {
@@ -2465,6 +2480,23 @@
         "security": [
           {
             "BearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "include",
+            "in": "query",
+            "description": "Élements à inclure avec la réponse",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string",
+                "enum": [
+                  "groups"
+                ]
+              },
+              "default": []
+            }
           }
         ],
         "responses": {
@@ -5209,6 +5241,17 @@
               "studentNumber": {
                 "type": "integer",
                 "example": 20210894
+              },
+              "groups": {
+                "type": "array",
+                "description": "IDs des groupes auxquels l'étudiant appartient",
+                "items": {
+                  "type": "string",
+                  "format": "uuid"
+                },
+                "example": [
+                  "31c14825-de80-43b5-88cc-89e21882a79d"
+                ]
               }
             }
           }
